--- a/Task 2/index.html
+++ b/Task 2/index.html
@@ -4,211 +4,91 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css"
-      integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <link rel="stylesheet" href="style.css" />
-    <title>Task 2</title>
+    <title>Vivek-Resume</title>
   </head>
   <body>
-    <div class="header">
-      <nav class="navbar">
-        <div class="icons">
-          <a href="#"><i class="fab fa-whatsapp"></i></a>
-          <a href="#"><i class="fab fa-google-plus-g"></i></a>
-          <a href="#"><i class="fab fa-facebook-square"></i></a>
-          <a href="#"><i class="fab fa-facebook-messenger"></i></a>
-          <a href="#"><i class="fab fa-twitter"></i></a>
-          <a href="#"><i class="fab fa-skype"></i></a>
-        </div>
-        <div class="topInfo">
-          <div class="innerHead">
-            <i class="far fa-envelope"></i>
-            <p><a href="#">info@educationpro.com</a></p>
-          </div>
-          <div class="innerHead">
-            <i class="fas fa-phone"></i>
-            <p><a href="#">+977 9813639131</a></p>
-          </div>
-          <div class="innerHead">
-            <p><a href="#">Login/Register</a></p>
-          </div>
-        </div>
-      </nav>
-      <div class="bottomNav">
-        <div class="nameimg">
-          <img src="images/logo.png" alt="logo" />
-          <h2 class="name">GREEN LEAF RESTRO</h2>
-        </div>
-        <div class="navContainer">
-          <ul>
-            <li class="navLinks"><a href="#">HOME</a></li>
-            <li class="navLinks">
-              <select name="Rooms" class="dropDown">
-                <option value="volvo">ROOMS</option>
-                <option value="saab">Saab</option>
-                <option value="mercedes">Mercedes</option>
-              </select>
-            </li>
-            <li class="navLinks">
-                <select name="Rooms" class="dropDown">
-                  <option value="volvo">GALLERY</option>
-                  <option value="saab">Saab</option>
-                  <option value="mercedes">Mercedes</option>
-                </select>
-              </li>
-              <li class="navLinks">
-                <select name="Rooms" class="dropDown">
-                  <option value="volvo">EVENTS</option>
-                  <option value="saab">Saab</option>
-                  <option value="mercedes">Mercedes</option>
-                </select>
-              </li>
-            <li class="navLinks"><a href="#">ABOUT</a></li>
-            <li class="navLinks"><a href="#">CONTACT</a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="info">
-        <h2>
-            Short info about us
-        </h2>
-        <h1>GET IN TOUCH WITH US</h1>
-        <button class="btn">Home > Blogs</button>
-      </div>
+    <h1 class="name">Vivek Vishwakarma</h1>
+    <h3 class="college">Student at Atharva College of Engineering</h3>
+    <img
+      class="image"
+      src="http://images.unsplash.com/photo-1471879832106-c7ab9e0cee23?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=1080&fit=max"
+      alt=""
+    />
+    <h3 class="name">Educational Info</h3>
+    <div class="table">
+      <table>
+        <tr>
+          <th>Sr No.</th>
+          <th>Institute</th>
+          <th>Course</th>
+          <th>Score</th>
+        </tr>
+        <tr>
+          <td>1</td>
+          <td>Pal Rajendra English High School</td>
+          <td>SSC</td>
+          <td>81%</td>
+        </tr>
+        <tr>
+          <td>2</td>
+          <td>Tp Bhatia College OF Science</td>
+          <td>HSC</td>
+          <td>78%</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Atharva College of Engineering</td>
+          <td>Engineering</td>
+          <td>9.5cgpa</td>
+        </tr>
+      </table>
     </div>
-    <div class="middle">
-      <div class="middleImg">
-        <img src="images/img.png" alt="food">
-      </div>
-      <div class="middleDiv">
-        <h2>Hand Make Ingredients</h2>
-        <div class="upperIcons">
-          <div class="middleIcons">
-            <i class="fas fa-calendar-alt"></i><p>9/12/2018</p>
-          </div>
-          <div class="middleIcons">
-            <i class="fas fa-user-alt"></i><p>Admin</p>
-          </div>
-          <div class="middleIcons">
-            <i class="fas fa-comment"></i><p>5 Comments</p>
-          </div>
+    <h3 class="name">Address</h3>
+    <address>
+      Flat No. 1726, New SRA Building, Hanuman Nagar, Akurli Road, Kandivali
+      East, Mumbai 400101.
+    </address>
+    <h3 class="name">Hobbies</h3>
+    <p>I like to code, play batmintion and games.</p>
+    <h3 class="name">Carrier Objective</h3>
+    <p>I want to become sucessful engineer and wants to see everyone happy</p>
+
+    <h1 class="name">A Job Application Form</h1>
+    <div class="form">
+      <form>
+        <label>Name : </label>
+        <input type="text" placeholder="Enter your name : " /><br />
+        <label>Email : </label>
+        <input type="email" placeholder="Enter your email : " /><br />
+        <label>Password : </label>
+        <input type="password" placeholder="Enter your password : " />
+        <p>Please select your preferred contact method:</p>
+        <input type="radio" id="contactChoice1" name="contact" value="email" />
+        <label for="contactChoice1">Email</label>
+
+        <input type="radio" id="contactChoice2" name="contact" value="phone" />
+        <label for="contactChoice2">Phone</label>
+
+        <input type="radio" id="contactChoice3" name="contact" value="mail" />
+        <label for="contactChoice3">Mail</label>
+        <br />
+        <label>Upload your Resume</label><br />
+        <input type="file" />
+        <br />
+        <p>Choose Stack</p>
+
+        <div>
+          <input type="checkbox"/>
+          <label for="scales">Frontend</label>
         </div>
-        <p class="middleText">Pellentesque habitant morbi tristique senectus et netus et male Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi, consectetur velit quas illo autem recusandae? Sit exercitationem libero quia nesciunt reiciendis nostrum aliquid laudantium molestiae nobis quisquam nemo voluptatem cumque minima, laborum ab doloremque tempora eaque minus, officiis aut perferendis!lorem3
-        </p>
-        <button class="middleBtn">Read More</button>
-      </div>
-    </div>
-    <div class="middle" style="margin-top: 20px;">
-      <div class="middleImg">
-        <img src="images/img.png" alt="food">
-      </div>
-      <div class="middleDiv">
-        <h2 style="color: black;">Hand Make Ingredients</h2>
-        <div class="upperIcons">
-          <div class="middleIcons">
-            <i class="fas fa-calendar-alt"></i><p>9/12/2018</p>
-          </div>
-          <div class="middleIcons">
-            <i class="fas fa-user-alt"></i><p>Admin</p>
-          </div>
-          <div class="middleIcons">
-            <i class="fas fa-comment"></i><p>5 Comments</p>
-          </div>
+
+        <div>
+          <input type="checkbox"/>
+          <label for="horns">Backend</label>
         </div>
-        <p class="middleText">Pellentesque habitant morbi tristique senectus et netus et male Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi, consectetur velit quas illo autem recusandae? Sit exercitationem libero quia nesciunt reiciendis nostrum aliquid laudantium molestiae nobis quisquam nemo voluptatem cumque minima, laborum ab doloremque tempora eaque minus, officiis aut perferendis!lorem3
-        </p>
-        <button class="middleBtn" style="background-color: rgb(18, 168, 78); color: white;">Read More</button>
-      </div>
-    </div>
-    <div class="opening">
-      <div class="openTitle">
-        <h1>OPENING HOURS</h1>
-      </div>
-      <div class="days">
-        <div class="innerDay" style="border: none;">
-          <h4>Sunday</h4>
-          <p>6am - 10pm</p>
-        </div>
-        <div class="innerDay">
-          <h4>Monday</h4>
-          <p>6am - 10pm</p>
-        </div>
-        <div class="innerDay">
-          <h4>Tuesday</h4>
-          <p>6am - 10pm</p>
-        </div>
-        <div class="innerDay">
-          <h4>Wednesday</h4>
-          <p>6am - 10pm</p>
-        </div>
-        <div class="innerDay">
-          <h4>Thursday</h4>
-          <p>6am - 10pm</p>
-        </div>
-        <div class="innerDay">
-          <h4>Friday</h4>
-          <p>6am - 10pm</p>
-        </div>
-        <div class="innerDay">
-          <h4>Saturday</h4>
-          <p>6am - 10pm</p>
-        </div>
-      </div>
-    </div>
-    </div>
-    <footer class="footer">
-      <div class="first">
-        <h1>
-          GREEN RESTAURANT PVT. LTD.
-        </h1>
-          <div class="innerHead">
-            <i class="fas fa-map-marker-alt"></i>
-            <p><a href="#">Samakhusi road, Gongabu, Kathmandu</a></p>
-          </div>
-          <div class="innerHead">
-            <i class="fas fa-phone"></i>
-            <p><a href="#">+977 9840059834</a></p>
-          </div>
-          <div class="innerHead">
-            <i class="far fa-envelope"></i>
-              <p><a href="#">info@spyderslab.com</a></p>
-          </div>
-      </div>
-      <div class="first">
-        <h1>
-          FOLLOW US
-        </h1>
-          <div class="innerHead">
-            <i class="fab fa-facebook-square"></i>
-            <p><a href="#">FACEBOOK</a></p>
-          </div>
-          <div class="innerHead">
-            <i class="fab fa-instagram"></i>
-            <p><a href="#">INSTAGRAM</a></p>
-          </div>
-          <div class="innerHead">
-            <i class="fab fa-youtube"></i>
-              <p><a href="#">YOYTUBE</a></p>
-          </div>
-      </div>
-      <div class="last">
-        <h1>
-          NEWS LETTER
-        </h1>
-        <P>We send you latest offers and news at least <br>once a week</P>
-        <form action="">
-          <input type="text" placeholder="Email address*"><br>
-          <button>Subscribe</button>
-        </form>
-      </div>
-    </footer>
-    <div class="end">
-      <p>© Copyright 2019 All Rights Reserved. <span>Green Leaf Restro pro </span>Powered by Wordpress</p>
+        <button type="submit">Submit</button>
+      </form>
     </div>
   </body>
 </html>
